--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="icons8-quiz-65.png" type="image/x-icon" />
+    <title>Quiz App</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="upper-head">
+        <h1 id="heading">Questions</h1>
+        <div id="clock"></div>
+      </div>
+      <div id="quiz">
+        <h2 id="questions">Questions goes here</h2>
+        <div id="answer-btn">
+          <!-- OPTIONS WILL SHOW HERE -->
+        </div>
+        <div id="next-btn">Next</div>
+      </div>
+    </div>
+
+    <script src="main.js"></script>
+  </body>
 </html>
