--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Quiz App</title>
   </head>
   <body>
+    <h1 class="quizapp">Quiz App</h1>
     <div class="container">
       <div class="upper-head">
         <h1 id="heading">Questions</h1>
