--- a/start.html
+++ b/start.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="icons8-quiz-65.png" type="image/x-icon" />
+    <title>Quiz App</title>
   </head>
   <body>
     <div class="container">
